/*
Copyright 2019-present Open Networking Foundation.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package atomix.raft.config;

import "google/protobuf/duration.proto";
import "gogoproto/gogo.proto";

option (gogoproto.testgen_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.equal_all) = true;

message ProtocolConfig {
    google.protobuf.Duration election_timeout = 1 [(gogoproto.stdduration) = true];
    google.protobuf.Duration heartbeat_interval = 2 [(gogoproto.stdduration) = true];
    StorageConfig storage = 3;
    CompactionConfig compaction = 4;
}

message StorageConfig {
    string directory = 1;
    StorageLevel level = 2;
    uint32 max_entry_size = 3;
    uint32 segment_size = 4;
    bool flush_on_commit = 5;
}

enum StorageLevel {
    DISK = 0;
    MAPPED = 1;
}

message CompactionConfig {
    bool dynamic = 1;
    float free_disk_buffer = 2;
    float free_memory_buffer = 3;
}